Safari 동작시 오류 수정 fix: Safari에서 발생하는 backface-visibility 오류 수정
1. window onload로 실행하던 게임시작 함수를 밖으로 빼내고 window.onload를 삭제함
css에서 -webkit...을 추가하여 safari에서도 backface-visibility속성을 동작할 수 있게함

2. 사파리에서 페이지 실행시 카드의 앞뒷면이 모두 보이는 이슈 발생

-

--- a/style.css
+++ b/style.css
@@ -63,6 +63,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  -webkit-perspective: 0;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0,0,0);
   background-position: center;
   background-repeat: no-repeat;
   backface-visibility: hidden;
